@@ -171,7 +171,12 @@ See `dotemacs--project-hook-function' for details." hook))
                       (describe-minor-mode-completion-table-for-symbol)
                       (lambda (mode)
                         (local-variable-if-set-p (intern mode)))
-                      'require-match
+                      (lambda (input)
+                        (and-let* ((mode (intern-soft input)))
+                          (custom-load-symbol mode)
+                          (when-let* ((def (symbol-function mode)))
+                            (autoload-do-load def mode))
+                          (local-variable-if-set-p mode)))
                       nil
                       'emmip--minor-mode-history))
     (project-current 'maybe-prompt)
@@ -190,6 +195,7 @@ See `dotemacs--project-hook-function' for details." hook))
                  (setq mode (get mode 'derived-mode-parent)))
                (nreverse values))))))
   (let ((default-directory (project-root project)))
+    (custom-load-symbol mode)
     (dolist (mm major-modes)
       (custom-load-symbol mm)
       (let ((hook (intern-soft (format "%S-hook" mm))))
